--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,12 +5,14 @@
 
   <body>
 
+    
     <div class="site-content">
 
       {% include nav-panel.html %}
 
       <div class="page-content">
         <div class="wrapper">
+          {% include header.html %}
           {{ content }}
         </div>
       </div>
